--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gettint-drunk": "^0.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gettint-drunk": "^0.4.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^2.1.4"
